[package]
name = "tzf-rel"
version = "0.0.2025-b"
edition = "2021"
license = "ODbL-1.0"
description = "Probuf based binary timezone data distribution for tzf-rs"
homepage = "https://github.com/ringsaturn/tzf-rel"
documentation = "https://github.com/ringsaturn/tzf-rel"
repository = "https://github.com/ringsaturn/tzf-rel"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
